--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -58,3 +58,8 @@ Today I Learn
 * htmlSegment로 동적 생선된 요소에 이벤트 처리 -> 제이쿼리 사용
   - https://rongscodinghistory.tistory.com/41
 * 이제 아이디 값 넘겨줄 것이다
+## 07.15
+* state문법 사용, state변수 변경(onClick{})
+  - state쓰던 html은 변경시 자동 랜더링됨.
+* state변수 변경시 array, object문법 주의해야함.
+  - x = [...array] 통해 화살표 바꿔줌.
