--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -4,6 +4,7 @@ Today I Learn
   - 05.04 : 개발동아리 팀 프로젝트 시작
   - 05.28 : 첫 백엔드 협업
   - 07.15 ~ : 애플코딩 React
+  - 07.15 : Notion 시작
 
 ## 03.17
 * 자바스크립트 onclick과 addEventListener메서드의 차이를 알아보았다.
@@ -63,3 +64,5 @@ Today I Learn
   - state쓰던 html은 변경시 자동 랜더링됨.
 * state변수 변경시 array, object문법 주의해야함.
   - x = [...array] 통해 화살표 바꿔줌.
+* 노션 글 정리
+  - https://www.notion.so/TIL-0b962de2d40f48f080278b4a41dd26ac?pvs=4
