--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -66,3 +66,6 @@ Today I Learn
   - x = [...array] 통해 화살표 바꿔줌.
 * 노션 글 정리
   - https://www.notion.so/TIL-0b962de2d40f48f080278b4a41dd26ac?pvs=4
+## 07.19
+* div ->컴포넌트 사용법을 배움(대문자 시작)
+  - 1. 반복 html, 2.큰 페이지, 3. 자주 변경
