--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -71,3 +71,5 @@ Today I Learn
   - 1. 반복 html, 2.큰 페이지, 3. 자주 변경
 * 동적 모달창 구현
 * 반복문 역할 -> map() 함수
+* 부모->자식에게 state를 전송하는 방법
+  - 1. <자식컴포넌트 작명={state이름}>, 2. props 파라미터 등록 후 props.작명 사용
