--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -73,3 +73,7 @@ Today I Learn
 * 반복문 역할 -> map() 함수
 * 부모->자식에게 state를 전송하는 방법
   - 1. <자식컴포넌트 작명={state이름}>, 2. props 파라미터 등록 후 props.작명 사용
+## 07.22
+* 강좌에서 주어진 과제인 글 추가, 삭제기능을 구현함.
+  - https://bgeun2.tistory.com/28
+  - 삭제는 배열 항목자체를 넘겨주고 filter함수를 통해 구현.
