--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -77,3 +77,4 @@ Today I Learn
 * 강좌에서 주어진 과제인 글 추가, 삭제기능을 구현함.
   - https://bgeun2.tistory.com/28
   - 삭제는 배열 항목자체를 넘겨주고 filter함수를 통해 구현.
+* class문법에 대해 알아보았다.
