--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -78,3 +78,5 @@ Today I Learn
   - https://bgeun2.tistory.com/28
   - 삭제는 배열 항목자체를 넘겨주고 filter함수를 통해 구현.
 * class문법에 대해 알아보았다.
+## 07.23
+* 쇼핑몰 프로젝트를 제작한다.
