--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -84,5 +84,6 @@ Today I Learn
 * import-export에 대해 익혔다.(함수, 컴포넌트도 가능)
   - object자료형을 다른 파일에 저장
 ## 07.24
-* 쇼핑몰 프로젝트를 제작한다.
-* 부트스트랩 사용법을 익혔다.
+* 라우터에 대해 익힘
+  - 1. 설치 -> npm install react-router-dom@6 2. index파일 -> import {BrowserRouter} from "react-router-dom";
+3. <BrowserRouter> <App /> </BrowserRouter>
