--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -85,8 +85,9 @@ Today I Learn
   - object자료형을 다른 파일에 저장
 ## 07.24
 * 라우터에 대해 익힘
-  - 1. 설치 -> npm install react-router-dom@6 2. index파일 -> import {BrowserRouter} from "react-router-dom";
-  - 3. <BrowserRouter> <App /> </BrowserRouter>
+  - 1 설치 -> npm install react-router-dom@6
+  - 2 index파일 -> import {BrowserRouter} from "react-router-dom";
+  - 3 <BrowserRouter> <App /> </BrowserRouter>
 ## 07.26
 * useNavigate함수(링크 역할)와 nested routes(Outlet사용)에 대해 배움.
 * url 파라미터를 이용해 페이지 여러개 작성 가능.
