--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -93,3 +93,7 @@ Today I Learn
 * url 파라미터를 이용해 페이지 여러개 작성 가능.
   - useParams라이브러리 활용
 ## 07.27
+* useEffect에 대해 배움.
+* ajax를 통해 서버와 연결해 데이터를 추출함.
+  - 강의에 주어진 응용문제 해보기
+  - post방식 공부해보기
