--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -97,3 +97,6 @@ Today I Learn
 * ajax를 통해 서버와 연결해 데이터를 추출함.
   - 강의에 주어진 응용문제 해보기
   - post방식 공부해보기
+## 07.28
+* 삼항 연산자가 아닌 if조건문을 쓰는 법을 배웠다.
+* 전환 애니메이션을 만들어보았다.
