--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -100,3 +100,5 @@ Today I Learn
 ## 07.28
 * 삼항 연산자가 아닌 if조건문을 쓰는 법을 배웠다.
 * 전환 애니메이션을 만들어보았다.
+* Context API에 대해 공부하였다.
+  - 컴포넌트 중첩시 사용하나 단점이 있어 Redux라이브러리 사용을 권장.
