--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -102,3 +102,6 @@ Today I Learn
 * 전환 애니메이션을 만들어보았다.
 * Context API에 대해 공부하였다.
   - 컴포넌트 중첩시 사용하나 단점이 있어 Redux라이브러리 사용을 권장.
+## 07.29
+* Redux라이브러리 사용방법
+* array 자료 안에 object 자료(state)를 Redux를 활용해 출력하였다.
