--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -106,3 +106,4 @@ Today I Learn
 * Redux라이브러리 사용방법
 * array 자료 안에 object 자료(state)를 Redux를 활용해 출력하였다.
 * Redux state를 수정하는 법을 배웠다.
+  - 1. 수정 함수를 변수에 작성 2. useDispatch를 활용해 함수 호출
