--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -107,3 +107,6 @@ Today I Learn
 * array 자료 안에 object 자료(state)를 Redux를 활용해 출력하였다.
 * Redux state를 수정하는 법을 배웠다.
   - 1. 수정 함수를 변수에 작성 2. useDispatch를 활용해 함수 호출
+## 08.01
+* 버튼 클릭시 state 수량을 +1시켜보았다.
+* 버튼 클릭시 state에 새로운 상품을 추가시켜 보았다.
