--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -112,3 +112,6 @@ Today I Learn
 * 버튼 클릭시 state에 새로운 상품을 추가시켜 보았다.
 * localStorage를 통해 데이터를 저장, 출력하였다.
 * 실시간 데이터 활용에 유용한 react-query를 알아보았다.
+## 08.02
+* React DevTools를 깔아 성능개선을 위한 기능들을 알아보았다.
+  - Profiler를 통해 성능저하되는 컴포넌트를 찾음.
