--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -115,3 +115,5 @@ Today I Learn
 ## 08.02
 * React DevTools를 깔아 성능개선을 위한 기능들을 알아보았다.
   - Profiler를 통해 성능저하되는 컴포넌트를 찾음.
+* Redux DevTools의 lazy기능을 적용해보았다.
+* 재렌더링을 막는 memo, useMemo에 대해 배웠다.
