--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -117,3 +117,6 @@ Today I Learn
   - Profiler를 통해 성능저하되는 컴포넌트를 찾음.
 * Redux DevTools의 lazy기능을 적용해보았다.
 * 재렌더링을 막는 memo, useMemo에 대해 배웠다.
+## 08.03
+* state 변경시 비동기적으로 처리되는 오류에 대해 알아보았다.
+  - useEffect()함수에 state변경 조건을 넣어 적절히 사용.
