--- a/동아리&리액트.md
+++ b/동아리&리액트.md
@@ -121,3 +121,4 @@ Today I Learn
 * state 변경시 비동기적으로 처리되는 오류에 대해 알아보았다.
   - useEffect()함수에 state변경 조건을 넣어 적절히 사용.
 * Node+Express 서버와 React를 연동하는 법에 대해 간단하게 배웠다.
+  - 프로젝트 진행시 자세하게 공부하기.
