--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -5,6 +5,7 @@ Today I Learn
   - 05.28 : 첫 백엔드 협업
   - 07.15 : Notion 시작
   - 07.15 ~ 08.03 : 애플코딩 React
+  - 09.11 ~ : React 프로젝트
 
 ## 03.17
 * 자바스크립트 onclick과 addEventListener메서드의 차이를 알아보았다.
@@ -123,3 +124,6 @@ Today I Learn
 * Node+Express 서버와 React를 연동하는 법에 대해 간단하게 배웠다.
   - 프로젝트 진행시 자세하게 공부하기.
 * https://www.notion.so/TIL-0b962de2d40f48f080278b4a41dd26ac
+## 09.11
+* 리액트 프로젝트를 시작한다.
+* 네이버 지도를 띄웠다.
