--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -129,3 +129,5 @@ Today I Learn
 * 네이버 지도를 띄웠다.
 ## 09.12
 * React의 마우스오버와 다운 기능을 활용해 슬라이더 기능을 구현하였다.
+* '위->아래로 드래그시' 값에 맞는 UI를 보여준다.
+  - 조건부 렌더링에 대해 공부하고 사용해보았다.
