--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -131,3 +131,8 @@ Today I Learn
 * React의 마우스오버와 다운 기능을 활용해 슬라이더 기능을 구현하였다.
 * '위->아래로 드래그시' 값에 맞는 UI를 보여준다.
   - 조건부 렌더링에 대해 공부하고 사용해보았다.
+## 09.13
+* 리액트 두번 렌더링 문제에 대해 이해하고 수정해보았다.
+  - https://velog.io/@hyes-y-tag/React-useEffect%EA%B0%80-%EB%91%90%EB%B2%88-%EC%8B%A4%ED%96%89%EB%90%9C%EB%8B%A4%EA%B3%A0
+* NAVER MAPS API를 사용하는데 CORS오류를 접하였다.
+  - 특히 maps api는 백엔드의 해결이 필요하다고 한다.
