--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -136,5 +136,7 @@ Today I Learn
   - https://velog.io/@hyes-y-tag/React-useEffect%EA%B0%80-%EB%91%90%EB%B2%88-%EC%8B%A4%ED%96%89%EB%90%9C%EB%8B%A4%EA%B3%A0
 * NAVER MAPS API를 사용하는데 CORS오류를 접하였다.
   - 특히 maps api는 백엔드의 해결이 필요하다고 한다.
+* UseNavigate
+  - https://velog.io/@seokkitdo/React-Link-useNavigate
 * 함수 두개로 두개의 기능(라우터, 렌더링) 실행.
   - https://velog.io/@daydreamplace/TIL-React-%EB%B2%84%ED%8A%BC-onClick-%EA%B8%B0%EB%8A%A5%EC%97%90-%ED%95%A8%EC%88%98-2%EA%B0%9C-%EC%A3%BC%EA%B3%A0-%EC%8B%B6%EC%96%B4
