--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -140,3 +140,6 @@ Today I Learn
   - https://velog.io/@seokkitdo/React-Link-useNavigate
 * 함수 두개로 두개의 기능(라우터, 렌더링) 실행.
   - https://velog.io/@daydreamplace/TIL-React-%EB%B2%84%ED%8A%BC-onClick-%EA%B8%B0%EB%8A%A5%EC%97%90-%ED%95%A8%EC%88%98-2%EA%B0%9C-%EC%A3%BC%EA%B3%A0-%EC%8B%B6%EC%96%B4
+## 09.14
+* html구조를 뜯어내 네이버 제공처 로고에 대해 알아보았다.
+  - z-index가 100으로 설정되어 있어 그동안 가려지지 않았다.
