--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -144,3 +144,5 @@ Today I Learn
 * html구조를 뜯어내 네이버 제공처 로고에 대해 알아보았다.
   - z-index가 100으로 설정되어 있어 그동안 가려지지 않았다.
     + 시간날때 이 요소에 접근하고 다루는 법을 알아보아야겠다.
+* 자식 -> 부모요소로 데이터 주는 방법을 통해 데이터 전송과 라우터 역할을 같이 수행하였다.
+  - 결과는 안됨!!!!!
