--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -146,3 +146,7 @@ Today I Learn
     + 시간날때 이 요소에 접근하고 다루는 법을 알아보아야겠다.
 * 자식 -> 부모요소로 데이터 주는 방법을 통해 데이터 전송과 라우터 역할을 같이 수행하였다.
   - 결과는 안됨!!!!!
+* 파라미터를 통해 해당 페이지에 데이터를 전송해주었다. 
+  - location 형태 - URL 쿼리
+    + https://velog.io/@soongle/React-url-%ED%8C%8C%EB%9D%BC%EB%AF%B8%ED%84%B0-%EA%B0%92-%EA%B0%80%EC%A0%B8%EC%98%A4%EA%B8%B0
+
