--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -149,4 +149,6 @@ Today I Learn
 * 파라미터를 통해 해당 페이지에 데이터를 전송해주었다. 
   - location 형태 - URL 쿼리
     + https://velog.io/@soongle/React-url-%ED%8C%8C%EB%9D%BC%EB%AF%B8%ED%84%B0-%EA%B0%92-%EA%B0%80%EC%A0%B8%EC%98%A4%EA%B8%B0
-
+## 09.15
+* 미디어쿼리를 이용해 디바이스 너비에 따라 디자인한다.
+  - 위치를 적용할때 fixed는 상단바 고정일때만 쓰기.. -> 미디어쿼리 할때 이상해짐
