--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -152,3 +152,5 @@ Today I Learn
 ## 09.15
 * 미디어쿼리를 이용해 디바이스 너비에 따라 디자인한다.
   - 위치를 적용할때 fixed는 상단바 고정일때만 쓰기.. -> 미디어쿼리 할때 이상해짐
+* 구멍 뚫린 폴리곤을 그림으로써 해당 지역만을 밝게 비추게 하였다.
+  - https://navermaps.github.io/maps.js.ncp/docs/tutorial-4-Shape.html
