--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -154,3 +154,6 @@ Today I Learn
   - 위치를 적용할때 fixed는 상단바 고정일때만 쓰기.. -> 미디어쿼리 할때 이상해짐
 * 구멍 뚫린 폴리곤을 그림으로써 해당 지역만을 밝게 비추게 하였다.
   - https://navermaps.github.io/maps.js.ncp/docs/tutorial-4-Shape.html
+## 09.17
+* axios처리를 통해 백엔드에서 데이터를 받아왔다.
+  - https://velog.io/@mgk8609/React%EC%97%90%EC%84%9C-Axios-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0
