--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -157,3 +157,5 @@ Today I Learn
 ## 09.17
 * axios처리를 통해 백엔드에서 데이터를 받아왔다.
   - https://velog.io/@mgk8609/React%EC%97%90%EC%84%9C-Axios-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0
+## 09.19
+* 배포를 위한 수정 작업에 들어간다.
