--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -159,3 +159,4 @@ Today I Learn
   - https://velog.io/@mgk8609/React%EC%97%90%EC%84%9C-Axios-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0
 ## 09.19
 * 배포를 위한 수정 작업에 들어간다.
+  - 이미지 파일은 svg로, 높이-넓이 맞추기, 데이터 처리 하기
