--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -160,3 +160,8 @@ Today I Learn
 ## 09.19
 * 배포를 위한 수정 작업에 들어간다.
   - 이미지 파일은 svg로, 높이-넓이 맞추기, 데이터 처리 하기
+## 09.20
+* svg파일을 마커로 찍게 한다.
+  - https://developers.google.com/maps/documentation/javascript/advanced-markers/graphic-markers?hl=ko
+  - svg파일은 캐싱이 불가, 로드때마다 읽어주어야함.
+    + https://velog.io/@ellie12/SVG
