--- a/동아리&리액트(2023.03~08).md
+++ b/동아리&리액트(2023.03~08).md
@@ -5,7 +5,7 @@ Today I Learn
   - 05.28 : 첫 백엔드 협업
   - 07.15 : Notion 시작
   - 07.15 ~ 08.03 : 애플코딩 React
-  - 09.11 ~ : React 프로젝트
+  - 09.11 ~ 20 : 광진구x대학교 연합축제 안내지도
 
 ## 03.17
 * 자바스크립트 onclick과 addEventListener메서드의 차이를 알아보았다.
